tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-1.stderr
error[E0275]: overflow evaluating the requirement `<Foo as FnOnce<()>>::Output == Foo`
  --> $DIR/type-alias-impl-trait-with-cycle-error-1.rs:6:21
   |
LL | fn crash(x: Foo) -> Foo {
   |                     ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
