tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-1.rs
#![feature(type_alias_impl_trait)]

type Foo = impl Fn() -> Foo;

#[define_opaque(Foo)]
fn crash(x: Foo) -> Foo {
    //~^ ERROR overflow evaluating the requirement `<Foo as FnOnce<()>>::Output == Foo`
    x
}

fn main() {}
